fix text overflow

--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -23,6 +23,7 @@ main {
 
     p {
       margin-bottom: 0;
+      overflow-wrap: break-word;
     }
 
   }
